--- a/less/moodle.less
+++ b/less/moodle.less
@@ -1726,3 +1726,40 @@ p.arrow_button{
         margin-right: 5em;
     }
 }
+
+// Notification zone (EVOSTDM-737).
+@media (max-width: 767px) {
+    li.usermenu .dropdown-toggle .fullnameusertext {
+        display:none;
+    }
+    .navbar .nav .usermenu > a {
+        min-width: 0px;
+    }
+    .navbar .nav > li > a {
+        padding: 10px 10px;
+    }
+}
+@media (max-width: 980px) {
+    .navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
+        padding: 5px 5px 1px;
+    }
+}
+@media (max-width: 360px) {
+    .navbar .nav > li > a {
+        padding: 10px 0px;
+    }
+    .navbar .nav .usermenu img {
+        height: 20px;
+        width: 20px;
+    }
+    .navbar .popover-region-toggle {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
+.navbar .popover-region-toggle img {
+    .studium-white-filter();
+}
+.navbar-inner .popover-region:hover, .navbar-inner .popover-region:not(.collapsed) {
+    background-color: #222;
+}
