MDLUM-4990 - MDL 3.2 - Appliquer les modifications à apporter au thème StudiUM * Correction des erreurs dans la page d'inscription utilisateur

--- a/less/cleanudem/mixins.less
+++ b/less/cleanudem/mixins.less
@@ -59,6 +59,21 @@
     top: 7px;
 }
 
+.studium-legacy-enrol-user-dialogue-close() {
+    width: 25px;
+    height: 15px;
+    position: absolute;
+    right: 1em;
+    margin-top: 0;
+    cursor: pointer;
+    text-indent: -9999px;
+    background: url([[pix:theme|sprite]]) no-repeat scroll 0 0 transparent;
+    &:active {
+        box-shadow: 0 0 0 1px rgba(0,0,0,0.25) inset,0 2px 4px rgba(0,0,0,0.30) inset;
+        border: none rgba(0,0,0,0);
+    }
+}
+
 // Dialogue main div.
 .studium-dialogue() {
     border: none;
