MDLUM-4990 - MDL 3.2 - Appliquer les modifications à apporter au thème StudiUM     * Uniformisation des boites de dialogue Bootstrap avec le style actuel du thème

--- a/less/moodle.less
+++ b/less/moodle.less
@@ -112,6 +112,26 @@
     }
 }
 
+// Bootstrap modal dialog.
+.modal-dialog {
+    .studium-dialogue;
+    .modal-content {
+        .studium-dialogue-container;
+        .modal-header {
+            .studium-dialogue-hd;
+            h4 {
+                .studium-dialogue-hd-title;
+            }
+        }
+        .modal-footer {
+            padding: 3px 15px 0;
+            .singlebutton {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
 // Old YUI dialog boxes.
 .yui-skin-sam {
     .yui-panel-container {
