MDLUM-4990 - MDL 3.2 - Appliquer les modifications à apporter au thème StudiUM * Correction pour uniformiser le style des boutons blanc

--- a/less/moodle.less
+++ b/less/moodle.less
@@ -1199,6 +1199,11 @@ p.arrow_button{
     }
 }
 
+// Use same style for generic and secondary buttons.
+.btn-secondary {
+    .btn;
+}
+
 // Use all the screen size.
 .container-fluid {
     max-width: none;
