MDL-57832 theme: Notifications preferences on/off icon problem on mobile

--- a/theme/bootstrapbase/style/moodle.css
+++ b/theme/bootstrapbase/style/moodle.css
@@ -6612,6 +6612,11 @@ a.ygtvspacer:hover {
     height: 470px;
   }
 }
+@media (max-width: 767px) {
+  .preferences-container .preference-table .preference-row .row-fluid div:nth-child(2) .preference-state input[type="checkbox"] + .preference-state-status-container {
+    margin-top: 3px;
+  }
+}
 /* Question */
 .questionbank h2 {
   margin-top: 0;
