--- a/theme/bootstrapbase/less/moodle/message.less
+++ b/theme/bootstrapbase/less/moodle/message.less
@@ -1203,3 +1203,17 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .preferences-container {
+        .preference-table {
+            .preference-row {
+                .row-fluid div:nth-child(2) {
+                    .preference-state input[type="checkbox"] + .preference-state-status-container {
+                        margin-top: 3px;
+                    }
+                }
+            }
+        }
+    }
+}
