MDLUM-4990 - MDL 3.2 - Appliquer les modifications à apporter au thème StudiUM * Correction des icônes des dropdown-menu en blanc lorsque survolé.

--- a/less/moodle.less
+++ b/less/moodle.less
@@ -594,6 +594,16 @@
     }
 }
 
+// Dropdown-menu.
+.dropdown-menu > li > a,
+.dropdown-submenu {
+    &:hover, &:focus {
+        img {
+            .studium-white-filter();
+        }
+    }
+}
+
 // Breadcrumb styling.
 .breadcrumb-nav {
     margin-bottom: 0;
