MDLUM-4990 - MDL 3.2 - Appliquer les modifications à apporter au thème StudiUM * Ajouter une marge entre l'image d'un groupe et son nom

--- a/less/moodle.less
+++ b/less/moodle.less
@@ -1448,6 +1448,11 @@ p.arrow_button{
     }
 }
 
+// Add margin between the group picture and the group name.
+.group_hoverdescription .grouppicture {
+    margin-right: 5px;
+}
+
 // Course content.
 .course-content {
     ul {
