--- a/mod/workshop/styles.css
+++ b/mod/workshop/styles.css
@@ -267,6 +267,18 @@
     margin: 0;
 }
 
+/**
+ * Wizard
+ */
+.path-mod-workshop.path-mod-workshop-wizard .mform .fgroup .proceedbutton {
+    float: right;
+    margin-right: 5%;
+}
+
+.path-mod-workshop .wizard-button {
+    float: right;
+}
+
 @media only screen and (max-width: 768px) {
     .path-mod-workshop .userplan {
         border-right: none;
@@ -317,6 +329,10 @@
         border-left: 1px solid #ddd;
         border-top: 1px solid #ddd;
         border-bottom: 1px solid #ddd;
+    }
+
+    .path-mod-workshop .wizard-button {
+        float: none;
     }
 }
 
