--- a/mod/workshop/styles.css
+++ b/mod/workshop/styles.css
@@ -700,3 +700,27 @@
 .path-mod-workshop .workshop-risk-dataloss {
     vertical-align: text-bottom;
 }
+.path-mod-workshop .strategybuttoncontainer {
+    text-align: center;
+}
+.path-mod-workshop .strategybuttoncontainer .action {
+    background-color: #f5f5f5;
+    background-image: linear-gradient(to bottom, #fff, #e6e6e6);
+    background-repeat: repeat-x;
+    border: 1px solid #aaa;
+    border-radius: 6px;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+    color: #333;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 20px;
+    margin: 0.5em;
+    overflow: hidden;
+    padding: 1em;
+    position: relative;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    vertical-align: top;
+    width: 150px;
+    text-decoration: none;
+}
