MDLUM-5232 - MDL 3.3 - Faire la fusion du code StudiUM avec la nouvelle version
    * enlever la double authentification

--- a/less/moodle.less
+++ b/less/moodle.less
@@ -763,22 +763,10 @@
         input[type=submit] {
             margin: 5px 0 5px 5px;
         }
-        &.login-cas input[type=submit] {
+        &.login-udem input[type=submit] {
             .studium-login-btn;
             padding: 8px 14px;
             font-size: 1.1em;
-        }
-        &.login-nocas {
-            margin-left: 5px;
-            input[type=submit] {
-                white-space: normal;
-                font-size:0.8em;
-                text-transform: none;
-                font-weight: normal;
-                line-height: 10px;
-                max-width: 110px;
-                padding: 3px 14px 4px;
-            }
         }
     }
     .helptooltip a {
@@ -848,9 +836,6 @@
             font-weight: bold;
             text-transform: uppercase;
             padding: 8px 18px;
-        }
-        &#frmloginnocas input {
-            .studium-login-btn;
         }
     }
     .signuppanel {
@@ -1186,7 +1171,7 @@ p.arrow_button{
 #chooseqtype_submit,
 #id_newcategory,
 .user-enroller-panel .close-button input,
-.login-cas input[type=submit],
+.login-udem input[type=submit],
 .showcoursesection input[type=submit],
 #gradetreesubmit input[type=submit],
 #udem_enrol_confirm input.enrol,
