--- a/mod/workshop/allocation/manual/styles.css
+++ b/mod/workshop/allocation/manual/styles.css
@@ -62,3 +62,16 @@
     font-size: 90%;
     margin-top: 1em;
 }
+
+.path-mod-workshop .manual-allocator .allocations .submission {
+    margin-top: 5px;
+}
+
+.path-mod-workshop .manual-allocator .allocations .submission .alert {
+    padding-left: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 0.8em;
+    font-weight: bold;
+    font-style: italic;
+}
